udemy_lecture_notes/8-Securing-Ingress/8.1-Secure-Ingress-Practice-Resources/service1.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: service1
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    run: service1
status:
  loadBalancer: {}
---
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: service1
  name: service1
spec:
  containers:
    - image: nginx
      name: service1
      ports:
        - containerPort: 80
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
