udemy_lecture_notes/8-Securing-Ingress/8.1-Secure-Ingress-Practice-Resources/service2.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: service2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: service2
status:
  loadBalancer: {}
---
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: service2
  name: service2
spec:
  containers:
  - image: httpd
    name: service2
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
